--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "simplemonads"
-version = "1.0.3"
-description = "Simple Monads for Python. Use Just to end checking for None, Success to end unhandled exceptions, and Reader for dependency injection at runtime."
+version = "1.0.4"
+description = "Simple Monads for Python. Use Just to end checking for None, Success to end unhandled exceptions, and Reader for dependency injection."
 authors = ["Stephen Daves"]
 license = "UNLICENSE"
 
